fix container layout problems
bootstrap conflicted with rails scaffold CSS
[#172403273]

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,24 +1,3 @@
-body {
-  background-color: #fff;
-  color: #333;
-  margin: 33px; }
-
-body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px; }
-
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px; }
-
-th {
-  padding-bottom: 5px; }
-
-td {
-  padding: 0 5px 7px; }
-
 div.field,
 div.actions {
   margin-bottom: 10px; }
@@ -50,6 +29,3 @@ div.actions {
 #error_explanation ul li {
   font-size: 12px;
   list-style: square; }
-
-label {
-  display: block; }
